# di-yield-curve-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-curve.yml
app/: main.py
data/curves/: benchmark_2026-06-15.csv  benchmark_2026-06-16.csv  benchmark_2026-06-17.csv  benchmark_2026-06-18.csv  benchmark_2026-06-19.csv  benchmark_2026-06-22.csv  benchmark_2026-06-23.csv  benchmark_2026-06-24.csv  benchmark_2026-06-25.csv  benchmark_2026-06-26.csv  benchmark_2026-06-29.csv  benchmark_2026-06-30.csv  benchmark_2026-07-01.csv  benchmark_2026-07-02.csv  benchmark_2026-07-03.csv  benchmark_2026-07-06.csv  benchmark_2026-07-07.csv  benchmark_2026-07-08.csv  benchmark_2026-07-09.csv  benchmark_2026-07-10.csv  benchmark_2026-07-13.csv  benchmark_2026-07-14.csv  benchmark_2026-07-15.csv  benchmark_2026-07-16.csv  benchmark_2026-07-17.csv  benchmark_2026-07-20.csv  benchmark_2026-07-21.csv  benchmark_2026-07-22.csv  benchmark_2026-07-23.csv  curve_2026-06-15.csv  curve_2026-06-16.csv  curve_2026-06-17.csv  curve_2026-06-18.csv  curve_2026-06-19.csv  curve_2026-06-22.csv  curve_2026-06-23.csv  curve_2026-06-24.csv  curve_2026-06-25.csv  curve_2026-06-26.csv  curve_2026-06-29.csv  (+47 more)
data/raw/: anbima_pre_2026-06-19.csv  settlements_2026-06-15.csv  settlements_2026-06-16.csv  settlements_2026-06-17.csv  settlements_2026-06-18.csv  settlements_2026-06-19.csv  settlements_2026-06-22.csv  settlements_2026-06-23.csv  settlements_2026-06-24.csv  (+21 more)
scripts/: build_curve.py  daily_curve.py  fetch_anbima_ettj.py  fetch_di1.py  plot_curve.py
tests/: conftest.py
(+22 files in other folders)
