[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yieldcurve"
version = "0.1.0"
description = "DI yield curve toolkit — market-agnostic engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pedro" }]
dependencies = [
    "bizdays>=1.0.19",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
    "fastapi>=0.110",
    "httpx>=0.27",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
oracle = [
    "QuantLib>=1.30",
]
data = [
    "pyettj>=0.4",
]
viz = [
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/*" = ["B008"]
"scripts/*" = ["E402"]
"tests/*" = ["E402"]
